--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="请输入密码"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="请输入邮箱"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -94,7 +94,9 @@
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.7"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/btn_selector"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -143,13 +145,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="fun"
-        android:text="进入网页版"
+        android:text="网页版☞"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.9" />
+        app:layout_constraintVertical_bias="0.9"
+        android:textColor="@color/colorPrimary"
+        android:background="@drawable/btn_selector"/>
 
 
     <android.support.constraint.Group
