--- a/app/src/main/res/layout/activity_stop_attendance.xml
+++ b/app/src/main/res/layout/activity_stop_attendance.xml
@@ -8,13 +8,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/star"
+        android:gravity="center">
         <Button
             android:id="@+id/end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="end_process"
-            android:text="结束考勤"></Button>
+            android:text="结束\n考勤"
+            android:textSize="30dp"
+            android:background="@drawable/button_circle"></Button>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
