--- a/app/src/main/res/layout/activity_teacher.xml
+++ b/app/src/main/res/layout/activity_teacher.xml
@@ -4,39 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeacherActivity">
+    tools:context=".TeacherActivity"
+    android:background="@drawable/magic"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="请选择相应的WiFi"></TextView>
+            android:text="请选择相应的WiFi"
+            android:layout_gravity="center"
+            android:textColor="#000"
+            android:textSize="20dp"
+            android:layout_margin="20dp"></TextView>
 
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="marquee" />
+            android:ellipsize="marquee"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:popupBackground="#fff"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="请选择相应的课程"></TextView>
+            android:text="请选择相应的课程"
+            android:layout_gravity="center"
+            android:textColor="#000"
+            android:textSize="20dp"
+            android:layout_margin="20dp"></TextView>
 
         <Spinner
             android:id="@+id/course_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="marquee" />
+            android:ellipsize="marquee"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:popupBackground="#fff"/>
         <Button
             android:id="@+id/start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="process"
-            android:text="开始考勤"></Button>
+            android:text="开始考勤"
+            android:textColor="#000"
+            android:background="@drawable/btn_selector"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"></Button>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
