--- a/app/src/main/res/layout/activity_twice_forbidden.xml
+++ b/app/src/main/res/layout/activity_twice_forbidden.xml
@@ -8,12 +8,17 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/failure">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="提交失败，此次考勤您已经提交，不能重复提交"
-            android:layout_centerInParent="true"></TextView>
+            android:text="已提交考勤，不能重复提交"
+            android:layout_centerInParent="true"
+            android:textSize="20dp"
+            android:textColor="#f00"
+            android:padding="2dp"
+            android:background="@color/white"></TextView>
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
