--- a/app/src/main/res/layout/activity_wait_for_atten.xml
+++ b/app/src/main/res/layout/activity_wait_for_atten.xml
@@ -8,12 +8,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/star">
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="提交成功，等待系统考核"
-        android:layout_centerInParent="true"></TextView>
+        android:layout_centerInParent="true"
+        android:textColor="@color/white"
+        android:textSize="20dp"></TextView>
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
